<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" android:supportsRtl="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.almanac.piyush.auntkitchen.Order"
    tools:showIn="@layout/activity_order">

    <TextView
        android:text="@string/auntname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="29dp"
        android:id="@+id/auntyname" />

    <TextView
        android:text="@string/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/auntyphone"
        android:layout_alignBaseline="@+id/auntyname"
        android:layout_alignBottom="@+id/auntyname"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/auntaddress"
        android:layout_below="@+id/auntyname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/auntaddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/textView15" />

    <TextView
        android:text="@string/item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView15"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="17dp"
        android:id="@+id/iname" />

    <TextView
        android:text="@string/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iname"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/imenu"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView22"
        android:layout_below="@+id/auntaddress"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/iprice"
        android:layout_alignBaseline="@+id/iname"
        android:layout_alignBottom="@+id/iname"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iprice"
        android:layout_toLeftOf="@+id/iprice"
        android:layout_toStartOf="@+id/iprice"
        android:id="@+id/textView23" />

    <TextView
        android:text="@string/line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imenu"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:id="@+id/textView24" />

    <TextView
        android:text="@string/quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView25"
        android:layout_below="@+id/textView24"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/textView25"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:id="@+id/iqty"
        android:hint="@string/quantity" />
</RelativeLayout>
