<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_custlogin"
    android:layout_width="match_parent"
    android:supportsRtl="true"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.almanac.piyush.auntkitchen.CustLogin">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView8"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/registercustomerxml"
                android:id="@+id/textView37"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="24sp"
                android:background="#b1c6bee4"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/line"
                android:id="@+id/textView42"
                android:layout_below="@+id/textView37"
                android:layout_centerHorizontal="true"
                android:textSize="20sp" />

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:id="@+id/imageView5"
                android:src="@drawable/logo"
                android:contentDescription="@string/logo"
                android:layout_below="@+id/textView42"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signupname"
                android:hint="@string/fullname"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_below="@+id/imageView5"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/signupphone"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_below="@+id/signupname"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/phone" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/signupemail"
                android:layout_below="@+id/signupphone"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:ems="10"
                android:id="@+id/signuppassword"
                android:layout_below="@+id/signupemail"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/setpassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/signupconfirmpassword"
                android:layout_below="@+id/signuppassword"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/confirmpassword" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/address"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/signupaddress"
                android:layout_below="@+id/signupconfirmpassword"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="#000000"
                android:layout_marginTop="6dp" />


            <ImageButton
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:id="@+id/signupbutton"
                android:src="@drawable/signup"
                android:contentDescription="@string/signup"
                android:layout_below="@+id/signupaddress"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:onClick="CustSignup" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/alreadyreister"
                android:id="@+id/textView45"
                android:layout_below="@+id/signupbutton"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/line"
                android:id="@+id/textView46"
                android:layout_below="@+id/textView45"
                android:layout_centerHorizontal="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/logincustomerxml"
                android:id="@+id/textView47"
                android:layout_below="@+id/textView46"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:id="@+id/loginemail"
                android:layout_below="@+id/textView47"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5dp"
                android:hint="@string/email" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/loginpassword"
                android:layout_below="@+id/loginemail"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:hint="@string/password" />

            <ImageButton
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:id="@+id/loginbutton"
                android:layout_below="@+id/loginpassword"
                android:contentDescription="@string/login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/login"
                android:onClick="CustLogin" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
