<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_dev"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:supportsRtl="true"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.almanac.piyush.auntkitchen.AboutDev">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="400dp">


            <TextView
                android:text="@string/aboutdeveloper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:id="@+id/textView16"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp" />

            <TextView
                android:text="@string/emailabt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView16"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="60dp"
                android:id="@+id/textView26"
                android:autoLink="email" />

            <TextView
                android:text="@string/namepiyush"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:id="@+id/textView17"
                android:layout_below="@+id/textView26"
                android:layout_centerHorizontal="true" />

            <TextView
                android:text="@string/portfolio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView27"
                android:autoLink="web"
                android:layout_below="@+id/textView29"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="45dp" />

            <TextView
                android:text="@string/githublink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView29"
                android:layout_marginTop="32dp"
                android:autoLink="web"
                android:layout_below="@+id/textView17"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
