<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_aprofile"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:supportsRtl="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.almanac.piyush.auntkitchen.Aprofile"
    tools:showIn="@layout/app_bar_aprofile"
    android:background="#e1e1e1"
    tools:ignore="Overdraw">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/logo"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/logo"
                android:id="@+id/imageView2" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/line"
                android:id="@+id/textView3"
                android:layout_below="@+id/imageView2"
                android:layout_centerHorizontal="true"
                android:textColor="#22708a" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/name"
                android:id="@+id/name"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email"
                android:id="@+id/email"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginTop="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/phone"
                android:id="@+id/phone"

                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/address"
                android:id="@+id/address"

                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/phone" />


        </RelativeLayout>
    </ScrollView>



</RelativeLayout>
